@@ -23,7 +23,7 @@ discouraged.
 }
 \details{
 \tabular{ll}{ Package: \tab pedometrics\cr Type: \tab Package\cr Version:
-\tab 0.4-1\cr Date: \tab 2014-12-01\cr License: \tab GPL (>= 2)\cr }
+\tab 0.4-2\cr Date: \tab 2014-12-08\cr License: \tab GPL (>= 2)\cr }
 }
 \author{
 Author and Maintainer: Alessandro Samuel-Rosa
@@ -33,6 +33,7 @@ Thesis advisors: Lúcia Helena Cunha dos Anjos, Gustavo de Mattos Vasques,
 Gerard B. M. Heuvelink
 
 Contributors: Tony Olsen, Tom Kincaid, Juan Carlos Ruiz Cuetos, Maria
-Eugenia Polo Garcia, Pablo Garcia Rodriguez, Edzer Pebesma, Jon Skoien
+Eugenia Polo Garcia, Pablo Garcia Rodriguez, Edzer Pebesma, Jon Skoien,
+Joshua French, Ken Kleinman, Dick Brus
 }
 
